--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <body>
 
   <li><a href="sydentertainment/">Lmask</a><td></td></li> 
-  <li><a href="repository.Lmask.zip">repository.Lmask.zip</a></li>
+  <li><a href="repository.Lmask-1.0.0.zip">repository.Lmask-1.0.0.zip</a></li>
 	 
   
   
