--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
  <body>
 
-  <li><a href="sydentertainment/">Lmask</a><td></td></li> 
+  <li><a href="sydentertainment/">Lmask</a></li> 
   <li><a href="repository.Lmask-1.0.0.zip">repository.Lmask-1.0.0.zip</a></li>
 	 
   
